<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasurer</string>
    <string name="action_settings">Settings</string>
    <string name="action_load">Load from old messages</string>
    <string name="action_reload">Load test data</string>
    <string name="action_clear">Clear</string>
    <string name="action_send">Send</string>
    <string name="action_payee_rules">Edit payee-category rules</string>
    <string name="payee_list_new">Add a new one</string>
    <string name="action_create_category">New category</string>
    <string name="unknown_payees">Show unknown payees</string>
    <string name="action_create_payee">New payee</string>
    <string name="sender">Upload method</string>
    <string name="sender_summary">Method to use for uploading / sending transaction data</string>
    <string name="sender_mail">E-mail</string>
    <string name="sender_pastebin">Pastebin</string>
    <string name="pref_senderType_key">senderType</string>
    <string name="pref_senderType_default">@string/pref_senderType_emailValue</string>
    <string name="pref_senderType_emailValue">email</string>
    <string name="pref_senderType_pastebinValue">pastebin</string>
    <string name="pref_senderType_emailName">E-Mail</string>
    <string name="pref_senderType_pastebinName">Pastebin</string>
    <string name="pref_emailTo_key">emailTo</string>
    <string name="emailTo">E-Mail report recipient</string>
    <string name="must_set_email_recipient">Please set the E-Mail recipient in Settings before trying to send an E-Mail
        transaction report.
    </string>
    <string name="pref_transactionReportTitle_key">transactionReportTitle</string>
    <string name="transactionReportTitle">Transaction report title</string>
    <string name="pref_transactionReportTitle_default">Transaction report %1$s - %2$s</string>
    <string name="pref_wantedSender_key">wantedSender</string>
    <string name="wantedSenders">Wanted SMS senders</string>
    <string name="wantedSenders_summary">Comma-separated list of phone numbers. SMS-es from these senders will be
        processed.
    </string>
    <string name="pref_wantedSender_default">+36309400700</string>
    <string name="action_link_dropbox">Link Dropbox account</string>
</resources>
