<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_senderType_key"
        android:title="@string/sender"
        android:summary="@string/sender_summary"
        android:defaultValue="@string/pref_senderType_default"
        android:entries="@array/senderTypes"
        android:entryValues="@array/senderTypeValues"/>
    <EditTextPreference
        android:key="@string/pref_emailTo_key"
        android:title="@string/emailTo"
        android:defaultValue=""/>
    <EditTextPreference
        android:key="@string/pref_transactionReportTitle_key"
        android:title="@string/transactionReportTitle"
        android:defaultValue="@string/pref_transactionReportTitle_default"/>
</PreferenceScreen>