<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/main_action_send"
        android:title="@string/action_send"/>
    <item
        android:id="@+id/main_action_clear"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/main_action_load"
        android:title="@string/action_load"/>
    <item
        android:id="@+id/main_action_link_dropbox"
        android:title="@string/action_link_dropbox"/>
    <item
        android:id="@+id/main_action_reload"
        android:title="@string/action_reload"/>
    <item
        android:id="@+id/main_action_payee_rules"
        android:title="@string/action_payee_rules"/>
    <item
        android:id="@+id/action_unknown_payees"
        android:title="@string/unknown_payees"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
</menu>
